# study-rust

./: .dockerignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  docker-compose.yaml
configuration/: base.yaml  production.yaml
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  mod.rs  password.rs  token.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs  tokens.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscription_confirm.rs  subscriptions.rs  token.rs
