[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
actix-web-lab = "0.20.2"
aes = "0.7"
anyhow = "1.0.86"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
block-modes = "0.8"
block-padding = "0.2"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
claim = "0.5.0"
config = "0.14.0"
hex = "0.4.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde-aux = "4.5.0"
sha3 = "0.10.8"
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "1.0.61"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.10"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
unicode-segmentation = "1.11.0"
uuid = { version = "1.8.0", features = ["v4"] }
validator = "0.18.1"

[dev-dependencies]
fake = "2.9.2"
linkify = "0.10.0"
once_cell = "1.19.0"
serde_json = "1.0.117"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6.0"
